--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BMM4NeQrw0d1GJ7gsfEq48hy1O34rIPQVgOS80wb2ZQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -42,3 +42,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_ENDPOINT=http://localhost:3000/api/v1.0/
