--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "vue-axios-cors": "^1.0.1",
         "vue-paginate": "^3.6.0"
     }
 }
